[project]
name = "jasper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.2",
    "h5py>=3.16.0",
    "msgpack>=1.1.2",
    "opencv-python>=4.13.0.92",
    "tensorboard>=2.20.0",
    "timm>=1.0.26",
    "torch>=2.10",
    "websockets>=16.0",
]
